add WYSIWYG editor and default host

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="mb-3">
     <%= form.label :content, style: "display: block", class: 'form-label' %>
-    <%= form.textarea :content, class: 'form-control' %>
+    <%= form.rich_textarea :content, class: 'form-control', style: 'min-height: 15em;' %>
   </div>
 
   <div>
