--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
     <div class="container col">
       <%= link_to post_url(post), class: "link-underline link-underline-opacity-0 link-body-emphasis" do %>
         <div class="col">
-          <%= truncate(post.content, length: 300) %>
+          <%= truncate(post.content.to_plain_text, length: 300) %>
         </div>
 
         <div class="row">
